compile warnings: Fixed many unsafe conversion to generics